菜肴体系初版：无序通用摆盘与逐项渲染
- 无序摆盘体系初版：GenericPlatingRecipe/候选匹配抽象，12 条通用配方（原始/调味/小食）+ 3 条烤制配方；
- 菜肴命名重构：生菜前缀 + 菜名本体，有序/无序共用同一套显示名机制；
- 食材数据模型重构：IngredientCategory 枚举化 + 食材表扩展（中型/小型配菜、浆果、鳕鱼块等）；
- 盘子渲染：无序菜逐项渲染（generic_plating 模型），跨类别共享盘面位置（容量权重分配），
  熟菜 cooked_ 前缀切换、吃阶段从后往前移除、渲染跟随盘子朝向；
- 模型加载：ModModelRules 新增 generic_plating 规则（按食材表自动展开槽位模型）；
- 资产：generic_plating 模型目录（主菜/中型/小型配菜生熟模型）与语言文件更新。